# testerg

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/config/: config.rviz
attach_shelf/launch/: attach_to_shelf.launch.py  leg_detection.launch.py  pre_approach.launch.py  pre_approach.launch.xml  rviz_launch.py
attach_shelf/src/: approach_service_server.cpp  leg_detection.cpp  move_to_frame_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
attach_shelf/srv/: MoveToFrame.srv
localization_server/config/: amcl_config_real.yaml  amcl_config_sim.yaml  paths5.rviz  paths_real.rviz  paths_sim.rviz
localization_server/launch/: localization_real.launch.py  localization_sim.launch.py
map_server/config/: map_keepout_real.pgm  map_keepout_real.yaml  map_keepout_sim.pgm  map_keepout_sim.yaml  warehouse_map_real.pgm  warehouse_map_sim.pgm
map_server/launch/: map_server_real.launch.py  map_server_sim.launch.py
nav2_apps/: package.xml  setup.py
nav2_apps/scripts/: disable_enable_costmap.py  get_costmap_parameters.py  get_crate_tf.py  get_crate_tf_true.py  get_frame_tf.py  get_robot_tf.py  move_shelf_to_ship_real.py  move_shelf_to_ship_sim.py  move_to_target_frame.py  move_to_target_frame_sim.py  reset_costmaps.py  set_costmap_parameters.py
path_planner_server/: CMakeLists.txt
path_planner_server/config/: behavior.xml  bt_navigator_real.yaml  bt_navigator_sim.yaml  controller_real.yaml  controller_sim.yaml  controller_sim3.yaml  filters_real.yaml  path_planner_config.rviz  planner_server_real.yaml  planner_server_sim.yaml  recovery.yaml  recovery_sim.yaml  waypoint_follower_real.yaml  waypoint_follower_sim.yaml
path_planner_server/launch/: pathplanner.launch.py  pathplanner_real.launch.py  pathplanner_sim.launch.py
